# AoC-2024

./: aoc2024.cabal
day01/: Locations.hs  Main.hs
day02/: Main.hs  Report.hs
day03/: Instruction.hs  InstructionParser.hs  Main.hs
day04/: Main.hs  Token.hs  WordSearch.hs
day05/: Main.hs  PageNumbers.hs  Rule.hs
day06/: Area.hs  Guard.hs  Main.hs
day07/: Equation.hs  Main.hs
day08/: Antennas.hs  Dimensions.hs  Main.hs
day09/: Disk.hs  Fragmentable.hs  Free.hs  Main.hs  Unfragmentable.hs
day10/: Main.hs  TopographicMap.hs
day11/: Main.hs  Stones.hs
day12/: FencedRegion.hs  Main.hs  Region.hs
day13/: ClawMachine.hs  Main.hs
day14/: Main.hs  Quadrant.hs  Robot.hs
day15/: BigBox.hs  BigWarehouse.hs  Box.hs  Main.hs  Robot.hs  SmallBox.hs  Warehouse.hs
day16/: Main.hs  Maze.hs  Move.hs  Node.hs
day17/: Computer.hs  Main.hs
day18/: Main.hs  MemorySpace.hs
day19/: Main.hs  Towel.hs
day20/: Main.hs  RaceTrack.hs
day21/: ArrowKey.hs  KeyPad.hs  Main.hs  NumericKey.hs
day22/: DifferenceSequence.hs  Main.hs  SecretNumber.hs
day23/: LanParty.hs  Main.hs
day24/: Connection.hs  Gate.hs  Main.hs  Wire.hs
day25/: Lock.hs  Main.hs
utils/: Grid.hs  TaggedRow.hs
