cabal-version:      3.0
name:               aoc2024
version:            0.1.0.0
author:             Jetze Zoethout
build-type:         Simple

common common
    ghc-options: -Wall -O1
    default-extensions:   RecordWildCards
                        , TypeApplications
                        , OverloadedStrings
                        , OverloadedRecordDot
                        , InstanceSigs
                        , TupleSections
    build-depends:    base ^>=4.17.2.1
                    , text
                    , split
                    , containers
                    , mtl
                    , vector
                    , clock
    default-language: Haskell2010

library utils
    import:           common
    exposed-modules:  Coordinate
                    , Direction
                    , Grid
                    , Parsers
                    , ProcessFile
                    , TaggedRow
    hs-source-dirs:   utils

executable day04
    import:           common
    main-is:          Main.hs
    other-modules:    Token
                    , WordSearch
    build-depends:    utils
    hs-source-dirs:   day04

executable day03
    import:           common
    main-is:          Main.hs
    other-modules:    InstructionParser
                    , Instruction
    build-depends:    utils
    hs-source-dirs:   day03

executable day02
    import:           common
    main-is:          Main.hs
    other-modules:    Report
    build-depends:    utils
    hs-source-dirs:   day02

executable day01
    import:           common
    main-is:          Main.hs
    other-modules:    Locations
    build-depends:    utils
    hs-source-dirs:   day01
