cabal-version:      3.0
name:               aoc2024
version:            0.1.0.0
author:             Jetze Zoethout
build-type:         Simple

common common
    ghc-options: -Wall -O1
    default-extensions:   RecordWildCards
                        , TypeApplications
                        , OverloadedStrings
                        , OverloadedRecordDot
                        , InstanceSigs
                        , MonadComprehensions
                        , TupleSections
    build-depends:    base ^>=4.17.2.1
                    , text
                    , split
                    , containers
                    , mtl
                    , vector
                    , clock
    default-language: Haskell2010

library utils
    import:           common
    exposed-modules:  Coordinate
                    , Direction
                    , Grid
                    , Parsers
                    , ProcessFile
                    , LocatedChar
    hs-source-dirs:   utils

executable day13
    import:           common
    main-is:          Main.hs
    other-modules:    ClawMachine
    build-depends:    utils
    hs-source-dirs:   day13

executable day12
    import:           common
    main-is:          Main.hs
    other-modules:    Region
                    , FencedRegion
    build-depends:    utils
    hs-source-dirs:   day12

executable day11
    import:           common
    main-is:          Main.hs
    other-modules:    Stones
    build-depends:    utils
    hs-source-dirs:   day11

executable day10
    import:           common
    main-is:          Main.hs
    other-modules:    TopographicMap
    build-depends:    utils
    hs-source-dirs:   day10

executable day09
    import:           common
    main-is:          Main.hs
    other-modules:    Disk
                    , Free
                    , Fragmentable
                    , Unfragmentable
    build-depends:    utils
    hs-source-dirs:   day09

executable day08
    import:           common
    main-is:          Main.hs
    other-modules:    Antennas
                    , Dimensions
    build-depends:    utils
    hs-source-dirs:   day08

executable day07
    import:           common
    main-is:          Main.hs
    other-modules:    Equation
    build-depends:    utils
    hs-source-dirs:   day07

executable day06
    import:           common
    main-is:          Main.hs
    other-modules:    Area
                    , Guard
    build-depends:    utils
    hs-source-dirs:   day06

executable day05
    import:           common
    main-is:          Main.hs
    other-modules:    Rule
                    , PageNumbers
    build-depends:    utils
    hs-source-dirs:   day05

executable day04
    import:           common
    main-is:          Main.hs
    other-modules:    Token
                    , WordSearch
    build-depends:    utils
    hs-source-dirs:   day04

executable day03
    import:           common
    main-is:          Main.hs
    other-modules:    InstructionParser
                    , Instruction
    build-depends:    utils
    hs-source-dirs:   day03

executable day02
    import:           common
    main-is:          Main.hs
    other-modules:    Report
    build-depends:    utils
    hs-source-dirs:   day02

executable day01
    import:           common
    main-is:          Main.hs
    other-modules:    Locations
    build-depends:    utils
    hs-source-dirs:   day01
